--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next",
+  "name": "qanda-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@reduxjs/toolkit": "^1.8.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^17.0.45",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "next": "^12.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.5",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "@types/node": "18.0.4",
-    "@types/react": "18.0.15",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.0.4",
+    "@types/react": "^18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-slick": "^0.23.10",
+    "@types/styled-components": "^5.1.25",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
-    "typescript": "4.7.4"
+    "jest": "^28.1.3",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.7",
+    "typescript": "^4.7.4"
   }
 }
