--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "gray-matter": "^4.0.3",
     "next": "^12.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
